--- a/producer-springboot/src/main/resources/application.yml
+++ b/producer-springboot/src/main/resources/application.yml
@@ -6,3 +6,5 @@ spring:
     virtual-host: /garven
     username: garven
     password: garven
+    // 开启producer -> exchange 的confirm 机制
+    publisher-confirms: true
